# toxic

./: .gitignore  CMakeLists.txt
config/: config.py  config.temp
includes/glad/: glad.h
lib/: libfreetype.so.6.17.1
resource/model/: 3d_ceshi_1.FBX  Agony.fbx  Arrow.fbx  Attack.fbx  CAO2.fbx  CS.fbx  Jumping.fbx  animation.fbx  boom.fbx  donghua_ceshi1.FBX  fangkuai.fbx  fangkuai_guge.fbx  fish.fbx  four_guge.fbx  ggjj.fbx  guge_suofang2.FBX  modelteat.fbx  motion.fbx  niaoguge.fbx  skeleton.FBX  sq.fbx  tianqi_donghua2.fbx  tianqi_donghua3.FBX  tianqi_jizuo.FBX  tq3.fbx  yu.fbx  yu1.fbx  yu2.fbx  yu3.fbx  yu4.fbx  yu5.fbx  yugang.fbx  小姑娘.FBX  小姑娘2.FBX  片旋转_2018.fbx
resource/model/CAO2.pla/: _u7A7A_u767D_1___u590D_u5236__PLA.mc  _u7A7A_u767D_1___u590D_u5236__PLA.xml
resource/model/Organodron City/: Organodron_City.mtl
resource/model/maya/: 11.fbx  22.fbx  33.fbx  44.fbx  gg11.fbx  gg12.fbx
resource/model/tab/: icon4.fbx  untitled.fbx
src/: GLUtils.cpp  GLUtils.h  Window.cpp  Window.h  main.cpp
src/objects/: Plane.cpp  Plane.h
src/shader/: Shader.h
src/vertices/: Vertices.cpp  Vertices.h  VerticesInfo.h
